@@ -180,6 +180,7 @@ form.button::after {
   border-bottom: 1px solid #e6e6e6;
   font-size: 16px;
   line-height: 1.5;
+  padding-bottom: 10px;
   padding-top: 10px;
 }
 
