@@ -11,6 +11,12 @@ general:
   * @todo And see what you can do about moving them to htmlspecialchars instead.
   * @todo Fix display of all scripts when bad API key or no data returned.
   * @todo add Morbus Iff block to add pages.
+  * @todo use http://developers.readmill.com/api/docs/v2/pagination.html
+
+user-export.php:
+  * reading periods are not supported yet.
+  * closing comments are not supported yet.
+  * remove duplicate 'user' data in every req.
 
 book-comments.php:
   * @todo add closing comments
